# VAESub

./: .gitignore  LICENSE  README.md  pyproject.toml
vaesub/: pyproject.toml
vaesub/src/vaesub/: vaesub.py
vaesub/tests/: test_vaesub.py
