[build-system]
requires = [
    "torch",
    "scikit-learn",
    "numpy",
    "pandas",
    ]
build-backend = "hatchling.build"

[project]
name = "VAESub"
version = "0.0.1"
authors = [
  { name="Henry Musto", email="musto101@gmail.com" },
]
description = "A package containing a variational autoencoder for longitudinal synthetic medical data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/musto101/VAESub"
Issues = "https://github.com/musto101/VAESub/issues"